--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-<h1>hello world good morning good evening</h1>
-<h1>水戸電子</h1>
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+
+    <h1>hello world good morning good evening</h1>
+    <h2>水戸電子</<h2>
+
+  </body>
+</html>
