--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style media="screen">
+    img{width:100%;}
   </head>
   <body>
 
     <h1>hello world good morning good evening</h1>
     <h2>水戸電子</<h2>
-
+    <img src="ペンギン.jpg" alt="">
+    
   </body>
 </html>
