--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
 
     <h1>hello world good morning good evening</h1>
-    <h2>水戸電子</<h2>
+    <h2>水戸電子</h2>
     <img src="ペンギン.jpg" alt="">
-    
+
   </body>
 </html>
