--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title></title>
     <style media="screen">
     img{width:100%;}
+    </style>
   </head>
   <body>
-
     <h1>hello world good morning good evening</h1>
     <h2>水戸電子</h2>
     <img src="ペンギン.jpg" alt="">
-
   </body>
 </html>
