名前を入れてください

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>hello world good morning good evening</h1>
     <h2>水戸電子</h2>
     <img src="ペンギン.jpg" alt="">
+    <a href="calc.html">calc</a>
   </body>
 </html>
