--- a/calc.html
+++ b/calc.html
@@ -5,9 +5,14 @@
     <title></title>
   </head>
   <body>
+
     <script type="text/javascript">
-      var prompt_a=prompt("名前を入れてください");
-      alert(prompt_a);
+      var prompt_a=prompt("一つ目の数を入れてください");
+      var prompt_a=prompt("二つ目の数を入れてください");
+
+      var result=prompt_a+prompt_b;
+
+      alert(result);
     </script>
   </body>
 </html>
