--- a/calc.html
+++ b/calc.html
@@ -10,7 +10,7 @@
       var prompt_a=prompt("一つ目の数を入れてください");
       var prompt_a=prompt("二つ目の数を入れてください");
 
-      var result=prompt_a+prompt_b;
+      var result=parseInt(prompt_a)+parseInt(prompt_b);
 
       alert(result);
     </script>
