--- a/calc.html
+++ b/calc.html
@@ -8,7 +8,7 @@
 
     <script type="text/javascript">
       var prompt_a=prompt("一つ目の数を入れてください");
-      var prompt_a=prompt("二つ目の数を入れてください");
+      var prompt_b=prompt("二つ目の数を入れてください");
 
       var result=parseInt(prompt_a)+parseInt(prompt_b);
 
