--- a/dentaku.html
+++ b/dentaku.html
@@ -8,7 +8,7 @@
 
     <input id="int1" type="text" name="" value="">
     <input id="int2" type="text" name="" value="">
-    <button type="button" name="button">計算</button>
+    <button onclick="keisan()" type="button" name="button">計算</button>
     <script type="text/javascript">
     function keisan(){
 
