--- a/dentaku.html
+++ b/dentaku.html
@@ -12,6 +12,8 @@
     <script type="text/javascript">
     function keisan(){
 
+      var element1=document.getElementById('int1');
+      var element2=document.getElementById('int2');
       var prompt_a=prompt("一つ目の数を入れてください");
       var prompt_b=prompt("二つ目の数を入れてください");
 
