--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h1>hello world good morning good evening</h1>
     <h2>水戸電子</h2>
     <img src="ペンギン.jpg" alt="">
-    <a href="dentaku.html">calc</a>
+    <a href="dentaku.html">dentaku</a>
   </body>
 </html>
