カウントする

--- a/cookie.html
+++ b/cookie.html
@@ -47,7 +47,7 @@
 
       setInterval(screen_update,10);
       function screen_update() {
-      span = document.getElementById('cookie_count')
+      span = document.getElementById('cookie_count');
       span.textContent=count;
     }
 
